# LibStuff

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
Benchmarks/Gfx/Image/: QoI.cpp
Benchmarks/Gfx/Util/: Alloc.cpp
Benchmarks/Maths/: DES.cpp  Hash.cpp  Random.cpp
Examples/: CPUID.cpp  GPS.cpp
Inc/Stuff/Competition/: Comp.hpp  Memo.hpp
Inc/Stuff/Files/: Format.hpp
Inc/Stuff/Graphics/: Image.hpp  Traits.hpp
Inc/Stuff/Graphics/Image/: QoI.ipp
Inc/Stuff/IO/: ACS.hpp  Delim.hpp  GPS.hpp  NTC.hpp  Nextion.hpp  Packetman.hpp  SoftUART.hpp
Inc/Stuff/Intro/: AggregateExplorers.hpp  AggregateExplorers.ipp  Builder.hpp  Dump.hpp  HelperTypes.hpp  Intro.hpp  Introspector.hpp  SAgg.hpp
Inc/Stuff/Intro/Introspectors/: Array.hpp  Map.hpp  Span.hpp  Tuple.hpp  UnorderedMap.hpp  Vector.hpp
Inc/Stuff/Maths/: Bit.hpp  CRC.hpp  Fmt.hpp  Maths.hpp  Random.hpp  Scalar.hpp  Std.hpp
Inc/Stuff/Maths/BLAS/: Concepts.hpp  MatVec.hpp  Matrix.hpp  Quat.hpp  Util.hpp  Vector.hpp
Inc/Stuff/Maths/CRC/: CRC32.hpp
Inc/Stuff/Maths/Check/: CRC.hpp  CRCDescriptions.ipp
Inc/Stuff/Maths/Crypt/: DES.hpp  Tripcode.hpp
Inc/Stuff/Maths/Crypt/DES/: Funcs.hpp  SBox.hpp  Tables.hpp
Inc/Stuff/Maths/Hash/: Sha2.hpp
Inc/Stuff/Maths/Scalar/: Basic.hpp  Classification.hpp  Exponential.hpp  FloatUtils.hpp  Interpolation.hpp  Manipulation.hpp  Other.hpp  Power.hpp  Scalar.hpp  Trig.hpp
Inc/Stuff/Refl/: Refl.hpp  ReflNew.hpp  Serde.hpp
Inc/Stuff/Serde/: BasicSerializers.hpp  Concepts.hpp  IntroSerializers.hpp  Serde.hpp
Inc/Stuff/Serde/Adapters/: BEncode.hpp  JSON.hpp
Inc/Stuff/Serde/Refl/: Refl.hpp
Inc/Stuff/Serde/Serializables/: Array.hpp
Inc/Stuff/Serde/Serializers/: JSON.hpp
Inc/Stuff/Util/: Alloc.hpp  Conv.hpp  CoroCompat.hpp  DummyIterator.hpp  Error.hpp  Hash.hpp  MMap.hpp  Scope.hpp  SpinLock.hpp  Timer.hpp  Tuple.hpp  UTF8.hpp  Util.hpp  Visitor.hpp
Inc/Stuff/Util/CPUID/: Features.hpp
Inc/Stuff/Util/Hacks/: Concepts.hpp  Coroutines.hpp  Expected.hpp  Try.hpp
Inc/Uncommon/: CEPackets.hpp  CETelemetry.hpp  LoRa.hpp  MPU9250.hpp
Src/IO/: Delim.cpp  GPS.cpp  SoftUART.cpp
Src/Util/: MMap.cpp
Src/Util/CPUID/: Features.cpp
Tests/Competition/: Comp.cpp
Tests/Graphics/: Image.cpp
Tests/IO/: Delim.cpp  GPS.cpp  Packetman.cpp
Tests/Intro/: Builder.cpp  Intro.cpp
Tests/Maths/: Bit.cpp  CRC.cpp  DES.cpp  Hash.cpp  Scalar.cpp  Vector.cpp
Tests/Refl/: Serde.cpp
Tests/Serde/: IntroSerializers.cpp  Serde.cpp
Tests/Util/: Alloc.cpp  Conv.cpp  Scope.cpp  Tuple.cpp  UTF8.cpp
